<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.monstarlab.test.moviefinder.kmp.shared.data.KmmMovie" />

        <variable
            name="movie"
            type="com.monstarlab.test.moviefinder.kmp.shared.data.KmmMovie" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.DetailMovieActivity"
        tools:showIn="@layout/activity_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@{movie.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                tools:text="@string/title_activity_detail" />

            <TextView
                android:id="@+id/overview_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/overview_title"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                tools:text="@string/overview_title" />

            <TextView
                android:id="@+id/overview_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@{movie.overview}"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                tools:text="@string/large_text" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>
